<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.FeedbackViewFragment"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:src="@drawable/back_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/pageHead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/outfit_regular"
                    android:letterSpacing="0.2"
                    android:text="@string/feedback"
                    android:textColor="@color/black"
                    android:textSize="30sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/round_white_button"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:outlineSpotShadowColor="@color/dark_gray">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/customerNameLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name:"
                        android:textSize="22dp"
                        android:fontFamily="@font/outfit_bold"
                        android:textColor="@color/dark_gray"/>
                    <TextView
                        android:id="@+id/customerNameInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="22dp"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/outfit_regular"
                        android:textColor="@color/dark_gray"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/feedbackHeadlineLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="Headline:"
                    android:textSize="22dp"
                    android:fontFamily="@font/outfit_bold"
                    android:textColor="@color/dark_gray"
                    />

                    <TextView
                        android:id="@+id/feedbackHeadlineInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="12"
                        android:text=""
                        android:textSize="22dp"
                        android:fontFamily="@font/outfit_regular"
                        android:textColor="@color/dark_gray"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/feedbackLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Feedback:"
                    android:textSize="22dp"
                    android:fontFamily="@font/outfit_bold"
                    android:textColor="@color/dark_gray"
                    />
                <TextView
                    android:id="@+id/feedbackInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="22dp"
                    android:fontFamily="@font/outfit_regular"
                    android:textColor="@color/dark_gray"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/feedbackScoreLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Score: "
                        android:textSize="22dp"
                        android:fontFamily="@font/outfit_bold"
                        android:textColor="@color/dark_gray"/>
                    <TextView
                        android:id="@+id/feedbackScoreInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="22dp"
                        android:fontFamily="@font/outfit_regular"
                        android:textColor="@color/dark_gray"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/orderDateLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Order Date: "
                        android:textSize="22dp"
                        android:fontFamily="@font/outfit_bold"
                        android:textColor="@color/dark_gray"/>
                    <TextView
                        android:id="@+id/orderDateInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="22dp"
                        android:fontFamily="@font/outfit_regular"
                        android:textColor="@color/dark_gray"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:id="@+id/btnViewOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/outfit_regular"
                    android:text="VIEW ORDER"
                    android:textColor="#2196F3"
                    android:textSize="22dp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>



                <Button
                    android:id="@+id/btnUpdateRead"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/round_dark_cream_button"
                    android:fontFamily="@font/outfit_light"
                    android:letterSpacing="0.15"
                    android:text="mark as read"
                    android:visibility="invisible"
                    android:textColor="@color/white"
                    />


            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</FrameLayout>