...
        <TextView
            android:id="@+id/ratingTextView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:layout_marginRight="3dp"
            android:text="5 / 5"
            android:textSize="20sp"
            android:fontFamily="@font/outfit_regular"
            android:textColor="@color/dark_gray"
            android:gravity="center"/>

        <View
...
